8284944: assert(cnt++ < 40) failed: infinite cycle in loop optimization

Reviewed-by: mdoerr
Backport-of: 796494d0fecfb9587e8b68ff1d5c09411cb82f89